# elementary-compiler

./: .gitignore  CMakeLists.txt  README.md
example/: array.simple  const.simple  declaration.simple  exp.simple  for-with-variable.simple  for.simple  hello.simple  hex.simple  if-else.simple  if-nested.simple  if.simple  limit.simple  max-threevalues.simple  min-arrayvalues.simple  prime.simple  print.simple  test.simple
include/: asmgen.h  asmutil.h  map.h  node.h  replacestring.c
src/: asmgen.c  asmutil.c  hashmap.c  main.c  map.c  map.h  node.c  parser.y  scanner.l  simple.l  simple.y  test.c
test/: f-const.simple  f-declar.simple  f-expresstion-syntax-error.simple  f-notdefined.simple  f-print-string-limit.simple  f-print-unknow-error.simple  t-const.simple  t-declar.simple  t-notdefined.simple  test.simple
